--- a/cv.html
+++ b/cv.html
@@ -109,6 +109,16 @@
     Work Experience
    </div>
    <div class="subsection">
+    4/2015 - Current<br/>
+    Software Developer<br/>
+    Cyberitas Technologies, LLC
+    <p/>
+    <ul>
+      <li>Lead development on the Java EE based backend of a real estate web site providing marketing and home searching functionality</li>
+      <li>Shift development to a test-driven approach, and improve the architecture to facilitate better testing</li>
+    </ul>
+   </div>
+   <div class="subsection">
     9/2011 - Current<br/>
     Software Developer/Owner<br/>
     Wold Technologies, Inc.
@@ -166,7 +176,17 @@
     Projects
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">Picmonic</span>
+    <div>January 2015 - March 2015</div>
+    <p>
+      Provided bug fixes/maintenance work on a recently developed iOS app for training students the health professions.
+      Added new features, with a focus on rich graphical UI and heavy use of audio playback. Adapted interface elements to
+      provide a first class experience on both iPad and iPhone devices.
+    </p>
+   </div>
+   <div class="subsection">
     <span class="subsectionTitle">FamilySearch Memories App</span>
+    <div>October - December 2014</div>
     <p>
       Implemented a new Android application to allow FamilySearch.org members to upload, view and manage photos, audio clips and stories
       about their ancestors. The app mirrors functionality in an existing iOS application. Functionality
@@ -175,7 +195,16 @@
     </p>
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">RubyRide App</span>
+    <div>October 2013 - December 2013</div>
+    <p>
+      Developed an iPhone app to allow users to request a ride from a car service. Users log in, the app gets their current location, and they specify where they want to go.
+      The info is communicated to a server and a car is dispatched. The app was developed for the iOS and communicates with a Node.js REST backend.
+    </p>
+   </div>
+   <div class="subsection">
     <span class="subsectionTitle">wagely.com</span>
+    <div>June 2012 - Current</div>
     <p>
       Developed payroll application to allow small businesses to pay employees, deduct taxes from paychecks, e-File quarterly withholding returns with federal/state revenue departments.
       The application front-end was developed in Ruby on Rails, with a Java backend for processing e-File tax transactions with state/federal governments. Developed
@@ -183,14 +212,8 @@
     </p>
    </div>
    <div class="subsection">
-    <span class="subsectionTitle">RubyRide App</span>
-    <p>
-      Developed an iPhone app to allow users to request a ride from a car service. Users log in, the app gets their current location, and they specify where they want to go.
-      The info is communicated to a server and a car is dispatched. The app was developed for the iOS and communicates with a Node.js REST backend.
-    </p>
-   </div>
-   <div class="subsection">
     <span class="subsectionTitle">Find My Train</span>
+    <div>October 2012 - Current</div>
     <p>
       Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
       users to view a list and map of stations, and view schedule times for all stops for the current day. This application was kicked off at Phoenix Startup
@@ -200,6 +223,7 @@
    </div>
    <div class="subsection">
     <span class="subsectionTitle">GetMyClass.com</span>
+    <div>July 2010 - Current</div>
     <p>
       Developed a service to monitor college class availability for students wishing to enroll in a class that is currently full. The service periodically monitors
       class availability and notifies users via text message or email if a spot opens up. The app and backend services were developed with Ruby on Rails and integrate
