add events and competitions

--- a/cv.html
+++ b/cv.html
@@ -352,6 +352,37 @@
     <span class="subsectionTitle">JA-SIG - Summer 2004</span>
     <br/>
     Best Practices for Channel Development (uPortal)
-   </div>
+   </div
+   <div id="competitions">
+    <div class="sectionTitle">Competitions and Events</div>
+    <div class="subsection">
+      <span class="subsectionTitle">Startup Weekend Phoenix - 2014</span>
+      <br/>
+      Developed a party game that coupled a native iPad app with a Google Chromecast app to display game info on a TV
+      screen. I developed the iOS portion of the app, and our team took first place in the competition.
+    </div>
+    <div class="subsection">
+      <span class="subsectionTitle">iOS Boot Camp - 2014</span>
+      <br/>
+      Participated and mentored others in a series of classes to learn iOS. The group took an online class over the course of
+      several months, and met weekly to discuss the material.
+    </div>
+    <div class="subsection">
+      <span class="subsectionTitle">Phoenix Transit Hackathon - 2014</span>
+      <br/>
+      Developed an iOS app to integrate with local realtime bus feeds, and show the current positions of nearby buses on a map.
+    </div>
+    <div class="subsection">
+      <span class="subsectionTitle">Startup Weekend Phoenix - 2012</span>
+      <br/>
+      Developed a light rail schedule application that finds the nearest light rail station and shows when the next train arrives. I did
+      the development work, including the iOS app and a Ruby on Rails backend. Our team took second place in the competition, participated in
+      ASU Rapid Startup School, and we continue to maintain the app.
+    </div>
+    <div class="subsection">
+      <span class="subsectionTitle">Startup Weekend Flagstaff - 2012</span>
+      <br/>
+      Developed a social media app called Loop to facilitate social media at industry conferences and meetups. As a developer on the team, I wrote the backend functionality in Ruby on Rails and assisted with the iOS app. Our team took first place in the competition.
+    </div>
  </body>
 </html>
