fix a few typos, move java down

--- a/cv.html
+++ b/cv.html
@@ -90,7 +90,6 @@
      Programming Platforms
     </span>
     <ul>
-      <li>Java - J2SE, J2EE, J2ME, Servlets/JSP, JDBC,JavaMail, JUnit, Hibernate, Spring, Tapestry, JSF, log4j</li>
       <li>.NET Framework - C#, Windows Forms, Web Forms, NHibernate</li>
       <li>Qualcomm BREW (C-based mobile API for CDMA feature phones)</li>
       <li>Javascript - JQuery, Angular, YUI</li>
@@ -100,6 +99,7 @@
       <li>Android - Compatibility API, Programming for device fragmentation</li>
       <li>Sencha Touch (JavaScript mobile framework)</li>
       <li>PhoneGap/Cordova</li>
+      <li>Java - Java EE, Servlets/JSP, JDBC, JUnit, Hibernate, Spring</li>
       <li>C/C++ - Linux system APIs, GTK+, Pebble (smartwatch) platform</li>
       <li>Web - HTML, CSS</li>
    </div>
@@ -179,7 +179,7 @@
     <span class="subsectionTitle">Picmonic</span>
     <div>January 2015 - March 2015</div>
     <p>
-      Provided bug fixes/maintenance work on a recently developed iOS app for training students the health professions.
+      Provided bug fixes/maintenance work on a recently developed iOS app for training students in the health professions.
       Added new features, with a focus on rich graphical UI and heavy use of audio playback. Adapted interface elements to
       provide a first class experience on both iPad and iPhone devices.
     </p>
@@ -191,7 +191,7 @@
       Implemented a new Android application to allow FamilySearch.org members to upload, view and manage photos, audio clips and stories
       about their ancestors. The app mirrors functionality in an existing iOS application. Functionality
       includes authentication, upload and download functionality with a REST API, integration with camera, audio recording/playback
-      and support for several different languages. Led development and provided mentoring to a team including another Junior Developer and QA Developer.
+      and support for several different languages. Led development and provided mentoring to a team including a Junior Developer and QA Developer.
     </p>
    </div>
    <div class="subsection">
@@ -207,7 +207,7 @@
     <div>October 2013 - December 2013</div>
     <p>
       Developed an iPhone app to allow users to request a ride from a car service. Users log in, the app gets their current location, and they specify where they want to go.
-      The info is communicated to a server and a car is dispatched. The app was developed for the iOS and communicates with a Node.js REST backend.
+      The info is communicated to a server and a car is dispatched. The app was developed for iOS and communicates with a Node.js REST backend.
     </p>
    </div>
    <div class="subsection">
@@ -360,7 +360,7 @@
     <span class="subsectionTitle">JA-SIG - Summer 2004</span>
     <br/>
     Best Practices for Channel Development (uPortal)
-   </div
+   </div>
    <div id="competitions">
     <div class="sectionTitle">Competitions and Events</div>
     <div class="subsection">
