add a rails app

--- a/cv.html
+++ b/cv.html
@@ -230,6 +230,15 @@
     </p>
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">Residential Management App</span>
+    <br/>
+    June 2012 - September 2012
+    <p>
+      Developed a mobile app in Sencha Touch for a client working on an app to manage tenants in a college housing community. Made modifications
+      to the client's existing Ruby on Rails app to add API for mobile app, and made various updates and bug fixes. Deployed app to Heroku.
+    </p>
+   </div>
+   <div class="subsection">
     <span class="subsectionTitle">GetMyClass.com</span>
     <div>July 2010 - Current</div>
     <p>
