--- a/cv.html
+++ b/cv.html
@@ -43,8 +43,8 @@
   <div class="name">
    Albert Wold
   </div>
-  3236 E Chandler Blvd #2056<br/>
-  Phoenix, AZ 85048<br/>
+  938 E Leeward Ln<br/>
+  Tempe, AZ 85283<br/>
   <p/>
   602.614.3736<br/>
   <p/>
@@ -55,7 +55,7 @@
   <p>
   <a href="http://blog.alwold.com">http://blog.alwold.com</a>
   </p>
-  <div id="summary">
+<!--   <div id="summary">
    <div class="sectionTitle">
     Summary
    </div>
@@ -66,9 +66,27 @@
     <li>Effective in applying technology to meet business requirements within resource constraints</li>
    </ul>
   </div>
-  <div id="skills">
+ -->  <div id="skills">
    <div class="sectionTitle">
     Skills
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">
+     Development Platforms
+    </span>
+    <ul>
+      <!-- <li>.NET Framework - C#, Windows Forms, Web Forms, NHibernate</li> -->
+      <!-- <li>Qualcomm BREW (C-based mobile API for CDMA feature phones)</li> -->
+      <!-- <li>Drupal module API</li> -->
+      <li>Java - Java EE, Servlets/JSP, JDBC, JUnit, Hibernate, Spring</li>
+      <li>Android - Compatibility API, Programming for device fragmentation</li>
+      <li>iOS - Objective C, Swift</li>
+      <li>Ruby on Rails - RSpec, Devise, cancan(can), FactoryGirl, heroku, capistrano</li>
+      <li>Javascript - JQuery, Angular</li>
+      <!-- <li>Sencha Touch (JavaScript mobile framework)</li> -->
+      <!-- <li>PhoneGap/Cordova</li> -->
+      <!-- <li>C/C++ - Linux system APIs, GTK+, Pebble (smartwatch) platform</li> -->
+      <li>Web - HTML, CSS</li>
    </div>
    <div class="subsection">
     <span class="subsectionTitle">
@@ -76,32 +94,14 @@
     </span>
     <br/>
     <uL>
-      <li>IDEs/editors - Eclipse, IntelliJ, XCode, Sublime Text, vi, Visual Studio</li>
-      <li>Source control - git, Mercurial, Subversion, CVS</li>
+<!--       <li>IDEs/editors - Eclipse, IntelliJ, XCode, Sublime Text, vi, Visual Studio</li>
+ -->      <li>Source control - git, Subversion</li>
       <li>Build tools - ant, Maven, gradle</li>
-      <li>Databases - PostgreSQL, MySQL, Oracle Database, Sybase, DB2</li>
-      <li>App/Web servers - Tomcat, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
-      <li>Unix tools - Kerberos, AFS, NFS, SSH, dump/restore, tar</li>
+      <li>Databases - PostgreSQL, MySQL, Oracle</li>
+      <li>App/Web servers - Tomcat, JBoss, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
+      <li>Unix tools - ssh, bash, vi, curl, network tools, etc.</li>
       <li>Project management - Confluence, JIRA</li>
-      <li>Other - JA-SIG CAS, Sakai, VMWare, Xen virtualization, Drupal, Apache Solr</li>
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">
-     Programming Platforms
-    </span>
-    <ul>
-      <li>.NET Framework - C#, Windows Forms, Web Forms, NHibernate</li>
-      <li>Qualcomm BREW (C-based mobile API for CDMA feature phones)</li>
-      <li>Javascript - JQuery, Angular, YUI</li>
-      <li>Drupal module API</li>
-      <li>iOS - Objective C, Swift</li>
-      <li>Ruby on Rails - RSpec, Devise, cancan</li>
-      <li>Android - Compatibility API, Programming for device fragmentation</li>
-      <li>Sencha Touch (JavaScript mobile framework)</li>
-      <li>PhoneGap/Cordova</li>
-      <li>Java - Java EE, Servlets/JSP, JDBC, JUnit, Hibernate, Spring</li>
-      <li>C/C++ - Linux system APIs, GTK+, Pebble (smartwatch) platform</li>
-      <li>Web - HTML, CSS</li>
+      <!-- <li>Other - JA-SIG CAS, Sakai, VMWare, Xen virtualization, Drupal, Apache Solr</li> -->
    </div>
   </div>
   <div id="experience">
@@ -114,7 +114,7 @@
     Cyberitas Technologies, LLC
     <p/>
     <ul>
-      <li>Lead development on the Java EE based backend of a real estate web site providing marketing and home searching functionality</li>
+      <li>Lead development on the Java EE based backend of a real estate web site providing marketing and home search functionality</li>
       <li>Shift development to a test-driven approach, and improve the architecture to facilitate better testing</li>
     </ul>
    </div>
@@ -176,6 +176,16 @@
     Projects
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">Find My Train</span>
+    <div>October 2012 - Current</div>
+    <p>
+      Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
+      users to view a list and map of stations, and view schedule times for all stops for the current day. This application was kicked off at Phoenix Startup
+      Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did customer development interviews with light
+      rail riders in order to determine the marketability and optimal set of features for the application. This app is currently available in the iOS and Google Play app stores and uses a Rails-based backend to get schedule data.
+    </p>
+   </div>
+   <div class="subsection">
     <span class="subsectionTitle">Picmonic</span>
     <div>January 2015 - March 2015</div>
     <p>
@@ -195,14 +205,6 @@
     </p>
    </div>
    <div class="subsection">
-    <span class="subsectionTitle">ASU Mobile</span>
-    <div>April - October 2014</div>
-    <p>
-      Provided technical consulting and development services for ASU's new mobile app for iOS and Android. Developed the RESTful backend web services
-      to provide data to the mobile app. The web services were developed in Java and provided JSON feeds to the app.
-    </p>
-   </div>
-   <div class="subsection">
     <span class="subsectionTitle">RubyRide App</span>
     <div>October 2013 - December 2013</div>
     <p>
@@ -215,21 +217,11 @@
     <div>June 2012 - Current</div>
     <p>
       Developed payroll application to allow small businesses to pay employees, deduct taxes from paychecks, e-File quarterly withholding returns with federal/state revenue departments.
-      The application front-end was developed in Ruby on Rails, with a Java backend for processing e-File tax transactions with state/federal governments. Developed
+      The application front-end was developed in Ruby on Rails, with a Java service for processing e-File tax transactions with state/federal governments. Developed
       a full test suite of unit and functional tests in RSpec to ensure application works per specifications.
     </p>
    </div>
-   <div class="subsection">
-    <span class="subsectionTitle">Find My Train</span>
-    <div>October 2012 - Current</div>
-    <p>
-      Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
-      users to view a list and map of stations, and view schedule times for all stops for the current day. This application was kicked off at Phoenix Startup
-      Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did customer development interviews with light
-      rail riders in order to determine the marketability and optimal set of features for the application. This app is currently available in the iOS and Google Play app stores.
-    </p>
-   </div>
-   <div class="subsection">
+<!--    <div class="subsection">
     <span class="subsectionTitle">Residential Management App</span>
     <br/>
     June 2012 - September 2012
@@ -238,13 +230,21 @@
       to the client's existing Ruby on Rails app to add API for mobile app, and made various updates and bug fixes. Deployed app to Heroku.
     </p>
    </div>
-   <div class="subsection">
+ -->   <div class="subsection">
     <span class="subsectionTitle">GetMyClass.com</span>
     <div>July 2010 - Current</div>
     <p>
       Developed a service to monitor college class availability for students wishing to enroll in a class that is currently full. The service periodically monitors
       class availability and notifies users via text message or email if a spot opens up. The app and backend services were developed with Ruby on Rails and integrate
       with Twilio for text messaging and Stripe for credit card processing.
+    </p>
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">ASU Mobile</span>
+    <div>April - October 2014</div>
+    <p>
+      Provided technical consulting and development services for ASU's new mobile app for iOS and Android. Developed the RESTful backend web services
+      to provide data to the mobile app. The web services were developed in Java and provided JSON feeds to the app.
     </p>
    </div>
    <div class="subsection">
@@ -256,7 +256,8 @@
     Created a fast, high performance synchronization process to provide hourly updates to data, replacing the previous system which ran once a day. Added an Apache Solr Cloud
     environment with an index of data for easier searching from user-facing applications. 
    </div>
-   <div class="subsection">
+   
+<!--    <div class="subsection">
     <span class="subsectionTitle">Course Enrollment Manager</span>
     <br/>
     Arizona State University
@@ -274,7 +275,7 @@
     involved taking a Java based application, and porting it to C/C++. A strong emphasis was made on retaining as much of the original 
     organization as possible, to allow developers to switch between the code bases more easily.
    </div>
-   <div>
+ -->   <div>
     <span class="subsectionTitle">Trimble Outdoors</span>
     <br/>
     Trimble Navigation<br/>
@@ -283,7 +284,7 @@
     ASP.NET-based web site to synchronize data with the mobile application.  The app was initially developed for the Java ME platform, and later ported to Qualcomm
     BREW and Blackberry to increase device/carrier reach.
    </div>
-   <div class="subsection">
+<!--    <div class="subsection">
     <span class="subsectionTitle">uPortal development/deployment (myASU)</span>
     <br/>
     Arizona State University <br/>
@@ -301,7 +302,7 @@
     Java using servlets and a PHP-based web mail client based on the free IMP product.  Modified the IMAP client used by PHP to support Kerberos 
     for single sign-on. 
    </div>
-  </div>
+ -->   </div>
   <div id="education"> 
    <div class="sectionTitle">
     Education
@@ -312,7 +313,7 @@
    </div>
    <p/>
   </div>
-  <div id="opensource">
+<!--   <div id="opensource">
    <div class="sectionTitle">Open Source Contributions</div>
    <div class="subsection">
     <span class="subsectionTitle">uPortal - Person Attributes Group Store</span>
@@ -333,7 +334,7 @@
     and any set of online learning services.  Course Enrollment Manager provides a way to automatically provision accounts within
     online learning services based on student information system data.
   </div>
-  <div id="speaking">
+ -->  <div id="speaking">
    <div class="sectionTitle">Presentations</div>
    <div class="subsection">
     <span class="subsectionTitle">RubyAZ - November 2014</span>
