--- a/cv.html
+++ b/cv.html
@@ -75,17 +75,11 @@
      Development Platforms
     </span>
     <ul>
-      <!-- <li>.NET Framework - C#, Windows Forms, Web Forms, NHibernate</li> -->
-      <!-- <li>Qualcomm BREW (C-based mobile API for CDMA feature phones)</li> -->
-      <!-- <li>Drupal module API</li> -->
-      <li>Java - Java EE, Servlets/JSP, JDBC, JUnit, Hibernate, Spring</li>
+      <li>iOS - Swift (2.x, 3.0), Objective C, Push notifications, TouchID, Autolayout</li>
       <li>Android - Compatibility API, Programming for device fragmentation</li>
-      <li>iOS - Objective C, Swift</li>
-      <li>Ruby on Rails - RSpec, Devise, cancan(can), FactoryGirl, heroku, capistrano</li>
-      <li>Javascript - JQuery, Angular</li>
-      <!-- <li>Sencha Touch (JavaScript mobile framework)</li> -->
-      <!-- <li>PhoneGap/Cordova</li> -->
-      <!-- <li>C/C++ - Linux system APIs, GTK+, Pebble (smartwatch) platform</li> -->
+      <li>Java - Java EE, Servlets/JSP, JDBC, JUnit, Hibernate, Spring</li>
+      <li>Ruby on Rails</li>
+      <li>Javascript</li>
       <li>Web - HTML, CSS</li>
    </div>
    <div class="subsection">
@@ -94,14 +88,12 @@
     </span>
     <br/>
     <uL>
-<!--       <li>IDEs/editors - Eclipse, IntelliJ, XCode, Sublime Text, vi, Visual Studio</li>
- -->      <li>Source control - git, Subversion</li>
-      <li>Build tools - ant, Maven, gradle</li>
+      <li>Source control - git, Subversion</li>
+      <li>Build tools - ant, Maven, gradle, CocoaPods, Fabric, fastlane</li>
       <li>Databases - PostgreSQL, MySQL, Oracle</li>
       <li>App/Web servers - Tomcat, JBoss, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
       <li>Unix tools - ssh, bash, vi, curl, network tools, etc.</li>
       <li>Project management - Confluence, JIRA</li>
-      <!-- <li>Other - JA-SIG CAS, Sakai, VMWare, Xen virtualization, Drupal, Apache Solr</li> -->
    </div>
   </div>
   <div id="experience">
@@ -109,13 +101,16 @@
     Work Experience
    </div>
    <div class="subsection">
-    4/2015 - Current<br/>
-    Software Developer<br/>
-    Cyberitas Technologies, LLC
+    10/2015 - Current<br/>
+    Mobile Software Developer<br/>
+    KUBRA (formerly iFactor)
     <p/>
     <ul>
-      <li>Lead development on the Java EE based backend of a real estate web site providing marketing and home search functionality</li>
-      <li>Shift development to a test-driven approach, and improve the architecture to facilitate better testing</li>
+      <li>Develop custom iOS apps for clients in the electric utility industry</li>
+      <li>Develop new apps in Swift and maintain existing Objective C apps/libraries</li>
+      <li>Migrate apps to new Swift releases</li>
+      <li>Develop Java backend services to integrate between app and utility web services</li>
+      <li>Act as a technical liason to the project team, assisting with customer requirement gathering, support, etc.</li>
     </ul>
    </div>
    <div class="subsection">
@@ -176,6 +171,21 @@
     Projects
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">Alliant Energy</span>
+    <div>2016-2017 (for release in late 2017)</div>
+    <p>
+      Lead development on a customer-facing app for Alliant Energy, an electric power company in Wisconsin. Built the majority of the app
+      in Swift 3, while integrating and enhancing an internal library written in Objective C. Lead initial requirements gathering sessions
+      at the client site, and was the main technical point of contact for the client. The app includes account login, outage status/reporting,
+      in-app payments and push notifications for outages.
+    </p>
+    <span class="subsectionTitle">Newfoundland Power</span>
+    <div>2015-2016</div>
+    <p>
+      Lead development on a customer-facing app for Newfoundland Power, an electric power company in Newfoundland, Canada. Built the app in Swift 2,
+      along with a service layer to convert SOAP services to REST based services. The app includes account login, outage status/reporting,
+      and an interactive component to assist users with reading mechanical electric meters.
+    </p>
     <span class="subsectionTitle">Find My Train</span>
     <div>October 2012 - Current</div>
     <p>
