Update to match a more recent resume

--- a/~alwold/cv.html
+++ b/~alwold/cv.html
@@ -43,8 +43,8 @@
   <div class="name">
    Albert Wold
   </div>
-  3236 E Chandler Blvd #2056<br/>
-  Phoenix, AZ 85048<br/>
+  938 E Leeward Ln<br/>
+  Tempe, AZ 85283<br/>
   <p/>
   602.614.3736<br/>
   <p/>
@@ -52,64 +52,55 @@
   <p>
    <a href="https://github.com/alwold">https://github.com/alwold</a>
   </p>
-  <p>
-  <a href="http://blog.alwold.com">http://blog.alwold.com</a>
-  </p>
-  <div id="summary">
-   <div class="sectionTitle">
-    Summary
-   </div>
-   <ul>
-    <li>Experienced developer with 15 years of professional experience</li>
-    <li>Committed to keeping up to date with advances in software development tools and techniques</li>
-    <li>Ability to quickly master new technologies in order to get the job done</li>
-    <li>Effective in applying technology to meet business requirements within resource constraints</li>
-   </ul>
-  </div>
   <div id="skills">
    <div class="sectionTitle">
     Skills
    </div>
    <div class="subsection">
     <span class="subsectionTitle">
+     Development Platforms
+    </span>
+    <ul>
+      <li>iOS - Swift (2.x, 3.0), Objective C, Push notifications, TouchID, Autolayout</li>
+      <li>Android - Compatibility API, Programming for device fragmentation</li>
+      <li>Java - Java EE, Servlets/JSP, JDBC, JUnit, Hibernate, Spring</li>
+      <li>Ruby on Rails</li>
+      <li>Javascript</li>
+      <li>Web - HTML, CSS</li>
+   </div>
+  </div>
+   <div class="subsection">
+    <span class="subsectionTitle">
     Applications
     </span>
     <br/>
     <uL>
-      <li>IDEs/editors - Eclipse, IntelliJ, XCode, Sublime Text, vi, Visual Studio</li>
-      <li>Source control - git, Mercurial, Subversion, CVS</li>
-      <li>Build tools - ant, Maven, gradle</li>
-      <li>Databases - PostgreSQL, MySQL, Oracle Database, Sybase, DB2</li>
-      <li>App/Web servers - Tomcat, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
-      <li>Unix tools - Kerberos, AFS, NFS, SSH, dump/restore, tar</li>
-      <li>Project management - Confluence, JIRA</li>
-      <li>Other - JA-SIG CAS, Sakai, VMWare, Xen virtualization, Drupal, Apache Solr</li>
+      <li>Source control - git, Subversion</li>
+      <li>Build tools - ant, Maven, gradle, CocoaPods, Fabric, fastlane</li>
+      <li>Databases - PostgreSQL, MySQL, Oracle</li>
+      <li>App/Web servers - Tomcat, JBoss, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
+      <li>Unix tools - ssh, bash, vi, curl, network tools, etc.</li>
+      <li>Project management - Confluence, JIRA, Trello</li>
    </div>
-   <div class="subsection">
-    <span class="subsectionTitle">
-     Programming Platforms
-    </span>
-    <ul>
-      <li>Java - J2SE, J2EE, J2ME, Servlets/JSP, JDBC,JavaMail, JUnit, Hibernate, Spring, Tapestry, JSF, log4j</li>
-      <li>.NET Framework - C#, Windows Forms, Web Forms, NHibernate</li>
-      <li>Qualcomm BREW (C-based mobile API for CDMA feature phones)</li>
-      <li>Javascript - JQuery, Angular, YUI</li>
-      <li>Drupal module API</li>
-      <li>iOS - Objective C, Swift</li>
-      <li>Ruby on Rails - RSpec, Devise, cancan</li>
-      <li>Android - Compatibility API, Programming for device fragmentation</li>
-      <li>Sencha Touch (JavaScript mobile framework)</li>
-      <li>PhoneGap/Cordova</li>
-      <li>C/C++ - Linux system APIs, GTK+, Pebble (smartwatch) platform</li>
-      <li>Web - HTML, CSS</li>
-   </div>
-  </div>
   <div id="experience">
    <div class="sectionTitle">
     Work Experience
    </div>
    <div class="subsection">
-    9/2011 - Current<br/>
+     10/2015 - 9/2017<br/>
+     Mobile Software Developer<br/>
+     KUBRA (formerly iFactor)<br/>
+   </div>
+   <p/>
+   <ul>
+     <li>Develop custom iOS apps for clients in the electric utility industry</li>
+     <li>Develop new apps in Swift and maintain existing Objective C apps/libraries</li>
+     <li>Migrate apps to new Swift releases</li>
+     <li>Develop Java backend services to integrate between app and utility web services</li>
+     <li>Act as a technical liason to the project team, assisting with customer requirement gathering, support, etc.</li>
+   </ul>
+   <div class="subsection">
+    9/2011 - 10/2015<br/>
     Software Developer/Owner<br/>
     Wold Technologies, Inc.
     <p/>
@@ -166,7 +157,43 @@
     Projects
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">Alliant Energy</span>
+    <br/>
+    2016-2017
+    <p>
+      Lead development on a customer-facing app for Alliant Energy, an electric power company in Wisconsin. Built the majority of the app in Swift 3, while integrating and enhancing an internal library written in Objective C. Lead initial requirements gathering sessions at the client site, and was the main technical point of contact for the client. The app includes account login, outage status/reporting, in-app payments and push notifications for outages.
+    </p>
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">Newfoundland Power</span>
+    <br/>
+    2015-2016
+    <p>
+     Lead development on a customer-facing app for Newfoundland Power, an electric power company in Newfoundland, Canada. Built the app in Swift 2, along with a service layer to convert SOAP services to REST based services. The app includes account login, outage status/reporting, and an interactive component to assist users with reading mechanical electric meters.
+    </p>
+   </div>
+   <div class="subsection">
+      <span class="subsectionTitle">Find My Train</span><br/>
+      October 2012 - Current
+      <p>
+        Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
+        users to view a list and map of stations, and view schedule times for all stops for the current day. This application was kicked off at Phoenix Startup
+        Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did customer development interviews with light
+        rail riders in order to determine the marketability and optimal set of features for the application. This app is currently available in the iOS and Google Play app stores.
+      </p>
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">Picmonic</span>
+    <br/>
+    January 2015 - March 2015
+    <p>
+     Provided bug fixes/maintenance work on a recently developed iOS app for training students in the health professions. Added new features, with a focus on rich graphical UI and heavy use of audio playback. Adapted interface elements to provide a first class experience on both iPad and iPhone devices.
+    </p>
+   </div>
+   <div class="subsection">
     <span class="subsectionTitle">FamilySearch Memories App</span>
+    <br/>
+    October - December 2014
     <p>
       Implemented a new Android application to allow FamilySearch.org members to upload, view and manage photos, audio clips and stories
       about their ancestors. The app mirrors functionality in an existing iOS application. Functionality
@@ -175,7 +202,17 @@
     </p>
    </div>
    <div class="subsection">
+    <span class="subsectionTitle">RubyRide App</span><br/>
+    October 2013 - December 2013
+      <p>
+        Developed an iPhone app to allow users to request a ride from a car service. Users log in, the app gets their current location, and they specify where they want to go.
+        The info is communicated to a server and a car is dispatched. The app was developed for the iOS and communicates with a Node.js REST backend.
+      </p>
+     </div>
+    <div class="subsection">
     <span class="subsectionTitle">wagely.com</span>
+    <br/>
+    2012 - 2015
     <p>
       Developed payroll application to allow small businesses to pay employees, deduct taxes from paychecks, e-File quarterly withholding returns with federal/state revenue departments.
       The application front-end was developed in Ruby on Rails, with a Java backend for processing e-File tax transactions with state/federal governments. Developed
@@ -183,27 +220,21 @@
     </p>
    </div>
    <div class="subsection">
-    <span class="subsectionTitle">RubyRide App</span>
-    <p>
-      Developed an iPhone app to allow users to request a ride from a car service. Users log in, the app gets their current location, and they specify where they want to go.
-      The info is communicated to a server and a car is dispatched. The app was developed for the iOS and communicates with a Node.js REST backend.
-    </p>
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">Find My Train</span>
-    <p>
-      Developed iOS and Android applications to allow Phoenix light rail users to locate nearest station and see next train arrival time. The application also allows
-      users to view a list and map of stations, and view schedule times for all stops for the current day. This application was kicked off at Phoenix Startup
-      Weekend in 2012, and took second place. The team then participated in ASU Rapid Startup School and did customer development interviews with light
-      rail riders in order to determine the marketability and optimal set of features for the application. This app is currently available in the iOS and Google Play app stores.
-    </p>
-   </div>
-   <div class="subsection">
     <span class="subsectionTitle">GetMyClass.com</span>
+    <br/>
+    2010 - 2017
     <p>
       Developed a service to monitor college class availability for students wishing to enroll in a class that is currently full. The service periodically monitors
       class availability and notifies users via text message or email if a spot opens up. The app and backend services were developed with Ruby on Rails and integrate
       with Twilio for text messaging and Stripe for credit card processing.
+    </p>
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">ASU Mobile</span>
+    <br/>
+    April - October 2014
+    <p>
+     Provided technical consulting and development services for ASU's new mobile app for iOS and Android. Developed the RESTful backend web services to provide data to the mobile app. The web services were developed in Java and provided JSON feeds to the app.
     </p>
    </div>
    <div class="subsection">
@@ -215,24 +246,6 @@
     Created a fast, high performance synchronization process to provide hourly updates to data, replacing the previous system which ran once a day. Added an Apache Solr Cloud
     environment with an index of data for easier searching from user-facing applications. 
    </div>
-   <div class="subsection">
-    <span class="subsectionTitle">Course Enrollment Manager</span>
-    <br/>
-    Arizona State University
-    <p/>
-    Refactored the Course Enrollment Manager (CEM) to convert it from an ASU-specific system to a generic solution for any educational institution. Developed integration
-    for schools operating under the IDEAL project, an Arizona partnership between several K-12 school districts. CEM is an application originally developed for ASU which synchronizes enrollment data between the student information systems and online learning
-    systems such as Blackboard, Sakai and iTunesU. 
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">Trimble Outdoors BREW port</span>
-    <br/>
-    Trimble Navigation<br/>
-    <p/>
-    Ported the Trimble Outdoors J2ME-based mobile application to Qualcomm BREW environment for use on a wider range of mobile devices. This
-    involved taking a Java based application, and porting it to C/C++. A strong emphasis was made on retaining as much of the original 
-    organization as possible, to allow developers to switch between the code bases more easily.
-   </div>
    <div>
     <span class="subsectionTitle">Trimble Outdoors</span>
     <br/>
@@ -241,24 +254,6 @@
     Designed and built a mobile application for outdoor recreational GPS naviation, with a focus on hiking. Developed a C# Windows application and
     ASP.NET-based web site to synchronize data with the mobile application.  The app was initially developed for the Java ME platform, and later ported to Qualcomm
     BREW and Blackberry to increase device/carrier reach.
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">uPortal development/deployment (myASU)</span>
-    <br/>
-    Arizona State University <br/>
-    <p/> 
-    Deployed an instance of the uPortal product (http://www.ja-sig.org), to provide a centralized portal to bring together information for ASU
-    students, faculty and staff. Developed an authentication module to support ASU's single sign-on environment, configured connections to databases, LDAP, etc.  
-    Developed various "channels" for the portal in Java to bring in information from campus data sources and supported other developers doing channel development.
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">Electronic Messaging Menu Application (EMMA)</span>
-    <br/>
-    Arizona State University 
-    <p/>
-    Deployed large-scale electronic messaging portal for a user base of about 70,000.  Key features include a J2EE authentication framework in 
-    Java using servlets and a PHP-based web mail client based on the free IMP product.  Modified the IMAP client used by PHP to support Kerberos 
-    for single sign-on. 
    </div>
   </div>
   <div id="education"> 
@@ -270,27 +265,6 @@
     BS, Computer Science, Arizona State University, May 2003
    </div>
    <p/>
-  </div>
-  <div id="opensource">
-   <div class="sectionTitle">Open Source Contributions</div>
-   <div class="subsection">
-    <span class="subsectionTitle">uPortal - Person Attributes Group Store</span>
-    <br/>
-    Worked with staff from Columbia University to implement an attribute-based group system for uPortal, allowing roles to be
-    assigned based on information from a central university directory system.
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">uPortal - Database Upgrade System</span>
-    <br/>
-    Designed and developed a system for performing automatic upgrades of a live uPortal database in preparation for deployment
-    of the latest release of the software.
-   </div>
-   <div class="subsection">
-    <span class="subsectionTitle">ASU/IDEAL - Course Enrollment Manager</span>
-    <br/>
-    Released ASU's Course Enrollment Manager as an abstracted service which can be integrated with any student information system
-    and any set of online learning services.  Course Enrollment Manager provides a way to automatically provision accounts within
-    online learning services based on student information system data.
   </div>
   <div id="speaking">
    <div class="sectionTitle">Presentations</div>
